Solve the overflow problem at the citationText level (no more at citationList)

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -72,6 +72,8 @@ body {
 
 /* ----------- TOP DES CITATIONS ----------- */
 
+$citationHeight: 65px;
+
 #topCitations { 
 	width: 467px;
 	height: 90%;
@@ -81,8 +83,8 @@ body {
 	flex-direction: column;
 
 	.box {
-		width: 65px;
-		height: 65px;
+		width: $citationHeight;
+		height: $citationHeight;
 		font-size: 15px;
 		.nbLikes {
 			font-size: 16px;
@@ -96,6 +98,8 @@ body {
 	font-size: 11.3px;
 	line-height: 10px;
 	text-align: justify;
+	overflow: auto;
+	height: auto;
 
 	color: #757575;
 	flex-grow: 1;
@@ -112,7 +116,6 @@ body {
 .citationContainer {
 	margin-top: 20px;
 	width: 95%;
-	height: auto;
 
 	display: grid;
 	grid-template-columns: 10% 17% 73%;
@@ -132,6 +135,7 @@ body {
 	display: flex;
 	align-items: flex-start;
 	flex-direction: column;
+	height: $citationHeight;
 }
 
 .pageNavigation {
@@ -192,5 +196,4 @@ body {
 
 .citationsList {
 	height: 510px;
-   	overflow: auto;
 }
